--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue-router": "^3.0.1",
     "vuex": "^3.1.1",
     "vxe-table": "^2.9.15",
+    "x-intelligent-ui": "^0.0.7",
     "xe-utils": "^2.6.6"
   },
   "devDependencies": {
