--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jspdf": "^2.0.0",
     "nprogress": "^0.2.0",
     "qs": "^6.7.0",
+    "v-clipboard": "^2.2.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.1",
