修改应用列表接口

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "js-md5": "^0.7.3",
     "jspdf": "^2.0.0",
     "nprogress": "^0.2.0",
-    "qrcodejs2": "^0.0.2",
+    "qrcodejs2": "0.0.2",
     "qs": "^6.7.0",
     "v-clipboard": "^2.2.3",
     "vue": "^2.5.2",
